Normalize JavaFX imports and list accessors